--- a/herolo-weather/package.json
+++ b/herolo-weather/package.json
@@ -14,11 +14,13 @@
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-animated-heart": "0.0.4",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-select": "^3.0.8",
+    "react-transition-group": "^1.2.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
