Done implementing FavoritesPage

--- a/herolo-weather/src/config.json
+++ b/herolo-weather/src/config.json
@@ -1,5 +1,5 @@
 {
-  "apiKey": "GrSjgTAv4A6GfnpHjmN1YpECEptI6KpB",
+  "apiKey": "htJ38PuRDnNbW2V2nZljCP4dbBmK25ni",
   "geopositionURL": "http://dataservice.accuweather.com/locations/v1/cities/geoposition/search",
   "currentWeatherURL": "http://dataservice.accuweather.com/currentconditions/v1/",
   "daysWeatherURL": "http://dataservice.accuweather.com/forecasts/v1/daily/5day/",
@@ -7,5 +7,6 @@
   "defaultCityKey": "215791",
   "defaultCityName": "Tel Aviv",
   "weatherIconsPre": "https://developer.accuweather.com/sites/default/files/",
-  "weatherIconsSuf": "-s.png"
+  "weatherIconsSuf": "-s.png",
+  "minSearchLength": 3
 }
