--- a/herolo-weather/package.json
+++ b/herolo-weather/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-select": "^3.0.8",
+    "react-toastify": "^5.5.0",
     "react-transition-group": "^1.2.1",
     "redux-thunk": "^2.3.0"
   },
