--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,9 @@
 {
   "apiKey": "rSdIDgLIu7b6yj7f9krAcCnzJ5BAWG7P",
-  "geopositionURL": "http://dataservice.accuweather.com/locations/v1/cities/geoposition/search",
-  "currentWeatherURL": "http://dataservice.accuweather.com/currentconditions/v1/",
-  "daysWeatherURL": "http://dataservice.accuweather.com/forecasts/v1/daily/5day/",
-  "autocompleteURL": "http://dataservice.accuweather.com/locations/v1/cities/autocomplete",
+  "geopositionURL": "https://dataservice.accuweather.com/locations/v1/cities/geoposition/search",
+  "currentWeatherURL": "https://dataservice.accuweather.com/currentconditions/v1/",
+  "daysWeatherURL": "https://dataservice.accuweather.com/forecasts/v1/daily/5day/",
+  "autocompleteURL": "https://dataservice.accuweather.com/locations/v1/cities/autocomplete",
   "defaultCityKey": "215791",
   "defaultCityName": "Tel Aviv",
   "weatherIconsPre": "https://developer.accuweather.com/sites/default/files/",
